2.0.5
- Fix hang in Windows when admin rights needed. (QTIFW-902)
- Use deterministic sorting order for components. (QTIFW-833)
- Resolve relative URLs from Updates.xml.

2.0.4
- Set also display name for Repository action "remove"
- Adjusted wrong repogen parameter name
- Fix settings test
- Make Execute operation work without arguments in Windows
- Add make install functionality with INSTALL_ROOT
- Do not force doc build on Linux when calling "make install"
- Documentation updates

2.0.3
- Update Japanese translation.
- Make IFW compile with FreeBSD. (QTIFW-841)
- Fix MSVC2015 build.
- Revert "Use QQmlV4Function to correctly get empty parameters from script."
- Fix crash when updating admin installation with user/temp repository (QTIFW-740)
- Compile with Qt 5.5, 5.6. Minimum version is now 5.5.
- Fix compile with namespace'ed Qt.

2.0.2
- Doc: Remove dubious sentence from installer.calculateComponentsToUninstall().
- Update documentation for --runoperation.
- Update the git-archive export options.
- Add alternative option where to read the installer-framework sha1.
- Add sync.profile.
- Add .qt-license-check.exclude and .qt-license-check.optional rules.
- Update license headers.
- Fix target directory check for reserved words on Windows.
- Use QQmlV4Function to correctly get empty parameters from script. (QTIFW-724)
- Fix errors when running updates in a directory requiring elevation. (QTIFW-746)
- Doc: Fix the function name in Controller Scripting page.
- Fix usage of system proxy with credentials. (QTBUG-46547)
- Unify handling of translations. QTIFW-390
- Init all components with proper install action. (QTIFW-727)
- Fix .dat file that gets deleted after multiple component changes on Windows.
- Fix maintenance tool upgrade on OS X.
- Fix handling of system proxy with credentials. (QTBUG-46547)
- Unify selection of language for translations. (QTIFW-390)
- Fix return value of component.installAction() when updating. (QTIFW-727)