@@ -2,6 +2,7 @@
 - Fix hang in Windows when admin rights needed. (QTIFW-902)
 - Use deterministic sorting order for components. (QTIFW-833)
 - Resolve relative URLs from Updates.xml.
+- Do not fail to install or update if repository is missing
 
 2.0.4
 - Set also display name for Repository action "remove"
